// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Facility Automatically replace mongodb id into ObjectId on populate data Should validate properly on Array 1`] = `
Object {
  "message": Array [
    Object {
      "messages": Array [
        "Invalid MongoDB id",
      ],
      "path": Array [
        "data",
        "images[1]",
      ],
    },
  ],
  "status": 422,
}
`;

exports[`Facility Automatically replace mongodb id into ObjectId on populate data Should validate properly on nested object 1`] = `
Object {
  "message": Array [
    Object {
      "messages": Array [
        "Invalid MongoDB id",
      ],
      "path": Array [
        "data",
        "image",
      ],
    },
  ],
  "status": 422,
}
`;

exports[`Facility Automatically replace mongodb id into ObjectId on populate data Should work on nested object 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "image": Object {
    "__v": 0,
    "_id": "MONGODB UNIQUE ID",
    "name": "Image1.jpg",
  },
  "name": "Mimi",
}
`;

exports[`Mongoose Schema Configuration Should able to enable timestamps using decorator 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "createdAt": DATE NOW,
  "stringProp": "string",
  "updatedAt": DATE NOW,
}
`;

exports[`Mongoose Schema Configuration Should able to enable timestamps using decorator from base class 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "createdAt": DATE NOW,
  "deleted": false,
  "stringProp": "string",
  "updatedAt": DATE NOW,
}
`;

exports[`Mongoose Schema Configuration Should able to specify configuration 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "STRING",
}
`;

exports[`Mongoose Schema Configuration Should able to specify default value 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "deleted": false,
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Configuration Should able to specify default value on base class 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "deleted": false,
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Configuration Should able to specify multiple configuration decorators 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "LOREM",
}
`;

exports[`Mongoose Schema Configuration Should able to use @schema.property() as noop decorator 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Generation Should able to call model factory multiple time on the same model 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Generation Should able to call model factory multiple time on the same model 2`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "strong",
}
`;

exports[`Mongoose Schema Generation Should able to call model factory multiple time on the same model with custom name 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Generation Should able to call model factory multiple time on the same model with custom name 2`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "strong",
}
`;

exports[`Mongoose Schema Generation Should able to rename collection with different name 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Generation Should work with cyclic reference model 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "children": Array [
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "booleanProp": true,
      "stringProp": "string",
    },
  ],
  "name": "lorem",
}
`;

exports[`Mongoose Schema Generation Should work with cyclic reference model 2`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "booleanProp": true,
  "dummy": Object {
    "__v": 0,
    "_id": "MONGODB UNIQUE ID",
    "name": "lorem",
  },
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Generation Should work with cyclic reference model with custom name 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "children": Array [
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "booleanProp": true,
      "stringProp": "string",
    },
  ],
  "name": "lorem",
}
`;

exports[`Mongoose Schema Generation Should work with cyclic reference model with custom name 2`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "booleanProp": true,
  "dummy": Object {
    "__v": 0,
    "_id": "MONGODB UNIQUE ID",
    "name": "lorem",
  },
  "stringProp": "string",
}
`;

exports[`Mongoose Schema Generation Should work with nested array model 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "children": Array [
    Object {
      "_id": "MONGODB UNIQUE ID",
      "booleanProp": true,
      "stringProp": "string",
    },
  ],
}
`;

exports[`Mongoose Schema Generation Should work with nested array with ref (populate) 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "children": Array [
    Object {
      "__v": 0,
      "_id": "MONGODB UNIQUE ID",
      "booleanProp": true,
      "stringProp": "string",
    },
  ],
}
`;

exports[`Mongoose Schema Generation Should work with nested model 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "child": Object {
    "booleanProp": true,
    "stringProp": "string",
  },
}
`;

exports[`Mongoose Schema Generation Should work with nested model with ref (populate) 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "child": Object {
    "__v": 0,
    "_id": "MONGODB UNIQUE ID",
    "booleanProp": true,
    "stringProp": "string",
  },
}
`;

exports[`Mongoose Schema Generation Should work with primitive array 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "booleanProp": Array [
    true,
    false,
  ],
  "dateProp": Array [
    2020-2-2,
    2020-2-3,
  ],
  "numberProp": Array [
    123,
    456,
  ],
  "stringProp": Array [
    "string",
    "strong",
  ],
}
`;

exports[`Mongoose Schema Generation Should work with primitive data 1`] = `
Object {
  "__v": 0,
  "_id": "MONGODB UNIQUE ID",
  "booleanProp": true,
  "dateProp": 2020-2-2,
  "numberProp": 123,
  "stringProp": "string",
}
`;
